--- a/Exercicio04/exB/index.html
+++ b/Exercicio04/exB/index.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista Ordenada</title>
+    <title>ExB - HTML</title>
     <style>
-        p{
+        h1 {
             font-size: medium;
             color: blue;
             padding: 0;
             margin-bottom: 0;
         }
     </style>
+
 </head>
+
 <body>
-    <p>ALUNOS DO SALÃO DE PROJETOS</p>
-    <ul type="-" start="1">
-        <li>CUIQUINHO</li>
-        <li>CHIQUITITA</li>
-        <li>CURURU</li>
-        <li>CURURUA</li>
-    </ul> 
+    <h1>DISCIPLINAS FINAIS</h1>
+    <ul>
+        <li>Programação Internet</li>
+        <li>Programação visual II</li>
+        <li>Estágio obrigatório</li>
+    </ul>
 </body>
+
 </html>
