--- a/Exercicio04/exF/index.html
+++ b/Exercicio04/exF/index.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ExF - HTML</title>
-    <link rel="stylesheet" href="./css/style.css"
-    ">
+    <link rel="stylesheet" href="./css/style.css" ">
 </head>
 <body>
     <main>
-        <div class="container">
-            
-            <p>Deixe um comentário</p>
+        <div class=" container">
 
-            <label for="inputNome"> Nome <br>
-                <input type="text" name="inputNome">
-            </label>
-            <label for="inputEmail"> E-mail <br>
-                <input type="text" name="inputEmail">
-            </label>
-            <label for="inputWebsite"> Website <br>
-                <input type="text" name="inputWebsite">
-            </label>
-            <label for="inputComentario"> Comentário <br>
-               <textarea name="" id="" cols="30" rows="10"></textarea>
-            </label>
-        </div>
+    <p>Deixe um comentário</p>
+    <form>
+
+        <label for="inputNome"> Nome <br>
+            <input type="text" name="inputNome">
+        </label>
+        <label for="inputEmail"> E-mail <br>
+            <input type="text" name="inputEmail">
+        </label>
+        <label for="inputWebsite"> Website <br>
+            <input type="text" name="inputWebsite">
+        </label>
+        <label for="inputComentario"> Comentário <br>
+            <textarea name="" id="" cols="30" rows="10"></textarea>
+        </label>
+    </form>
+    </div>
     </main>
-</body>
+    </body>
+
 </html>
