--- a/Exercicio04/exH/index.html
+++ b/Exercicio04/exH/index.html
@@ -87,6 +87,12 @@
                         <input type="checkbox" name="checkPolitica" id="tecnologia"><label for="tecnologia"> Tecnologia</label>
                         <input type="checkbox" name="checkPolicial" id="tecnologia"><label for="tecnologia"> Tecnologia</label>
                         <input type="checkbox" name="checkTempo" id="tecnologia"><label for="tecnologia"> Tecnologia</label>
+                        <input type="checkbox" name="checkCultura" id="tecnologia"><label for="tecnologia"> Tecnologia</label>
+                        <input type="checkbox" name="checkEconomia" id="tecnologia"><label for="tecnologia"> Tecnologia</label>
+                        <input type="checkbox" name="checkJogos" id="tecnologia"><label for="tecnologia"> Tecnologia</label>
+                        <input type="checkbox" name="checkEducação" id="tecnologia"><label for="tecnologia"> Tecnologia</label>
+                        <input type="checkbox" name="checkViagem" id="tecnologia"><label for="tecnologia"> Tecnologia</label>
+                        <input type="checkbox" name="checkEmpregos" id="tecnologia"><label for="tecnologia"> Tecnologia</label>
                         <input type="checkbox" name="checkTecnologia" id="tecnologia"><label for="tecnologia"> Tecnologia</label>
                         <input type="checkbox" name="checkTecnologia" id="tecnologia"><label for="tecnologia"> Tecnologia</label>
                     </td>
